add task dialog

--- a/app/src/main/res/layout/dialog_add_task.xml
+++ b/app/src/main/res/layout/dialog_add_task.xml
@@ -1,20 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:padding="20dp">
+    android:padding="24dp">
 
-    <com.google.android.material.textfield.TextInputLayout
-        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
+    <EditText
+        android:id="@+id/edit_text_task_title"
         android:layout_width="match_parent"
-        android:hint="Task Name"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:autofillHints="taskName"
+        android:hint="@string/dialog_add_task_title_hint"
+        android:inputType="text"
+        android:textSize="16sp"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edit_text"
-            android:layout_width="match_parent"
-            tools:text="Example Task Name"
-            android:layout_height="wrap_content" />
-    </com.google.android.material.textfield.TextInputLayout>
-</LinearLayout>
+    <EditText
+        android:id="@+id/edit_text_task_details"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:autofillHints="taskName"
+        android:hint="@string/dialog_add_task_add_details_hint"
+        android:inputType="text"
+        android:textSize="14sp"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/edit_text_task_title"
+        tools:visibility="visible" />
+
+    <ImageButton
+        android:id="@+id/button_show_details"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:background="@null"
+        android:contentDescription="@string/dialog_add_task_details_button"
+        android:src="@drawable/ic_details"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/edit_text_task_details" />
+
+    <ImageButton
+        android:id="@+id/button_star_task"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:background="@null"
+        android:contentDescription="@string/dialog_add_task_star_button"
+        android:src="@drawable/ic_star"
+        app:layout_constraintStart_toEndOf="@id/button_show_details"
+        app:layout_constraintTop_toTopOf="@id/button_show_details" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/button_save"
+        style="@style/Widget.Material3.Button.TextButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/dialog_add_task_save_button"
+        app:layout_constraintBottom_toBottomOf="@id/button_show_details"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/button_show_details" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
